Make admonitions linkable.

--- a/sphinx/_templates/layout.html
+++ b/sphinx/_templates/layout.html
@@ -3,3 +3,4 @@
 {% extends "!layout.html" %}
 
 {% set css_files = css_files + ['_static/css/rtd-theme-fix.css', '_static/pygments.css'] %}
+{% set script_files = script_files + ['_static/js/rtd-theme-extensions.js'] %}
